--- a/Some_projects/index.html
+++ b/Some_projects/index.html
@@ -57,11 +57,11 @@
             </div>
         </div>
     </div>
-    <div class="dIwali d-flex flex-column justify-content-center" id="section3">
-        <div class="processing">
+    <div class="dIwali" id="section3">
+        <div class="processing d-flex flex-column justify-content-end">
             <div class="loading m-auto"></div>
             <h1 class="precaution">Work Under Progress.....</h1>
-            <button class="button123" onclick="display('section1')">Back</button>
+            <button class="button123 m-auto" onclick="display('section1')">Back</button>
         </div>
 
     </div>
