--- a/restaurant_site/index.html
+++ b/restaurant_site/index.html
@@ -21,7 +21,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-link active" id="navItem1" href="#">Why Choose Us? <span class="sr-only">(current)</span></a>
+            <a class="nav-link active" id="navItem1" href="#wcu">Why Choose Us? <span class="sr-only">(current)</span></a>
             <a class="nav-link" id="navItem2" href="#">Explore Menu</a>
             <a class="nav-link" id="navItem3" href="#">Delivery & Payments</a>
             <a class="nav-link" id="navItem4" href="#">Follow Us</a>
@@ -46,10 +46,10 @@
         </button>
       </div>
     </div>
-    <div class="wcu-section pt-5 pb-5">
-      <div class="fluid-container"> 
+    <div class="wcu-section pt-3 pb-5">
+      <div class="container"> 
         <div class="row">
-          <div class="col-12" style="background-color: aqua;">
+          <div class="col-12 ml-3">
             <h1 class="wcu-section-heading">
               Why Choose Us?
             </h1>
@@ -58,29 +58,41 @@
             </p>
           </div>
           <div class="col-12 col-md-4">
-            <div class="wcu-card mb-3 p-3">
-              <img src="https://thumbs.dreamstime.com/b/assorted-indian-food-set-wooden-background-dishes-appetisers-indeed-cuisine-rice-lentils-paneer-samosa-spices-mas-masala-179640947.jpg" class="wcu-card-image"/>
-              <h1 class="wcu-card-title">...</h1>
-              <p class="wcu-card-description">...</p>
+            <div class="wcu-card p-3 mb-3" id="wcu">
+              <img
+                src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/food-serve.png"
+                class="wcu-card-image"/>
+              <h1 class="wcu-card-title mt-3">Food Service</h1>
+              <p class="wcu-card-description">
+                Experience fine dining at the comfort of your home. All our orders are carefully packed and arranged to give you the nothing less than perfect.
+              </p>
             </div>
           </div>
           <div class="col-12 col-md-4">
-            <div class="wcu-card mb-3 p-3">
-              <img src="https://thumbs.dreamstime.com/b/assorted-indian-food-set-wooden-background-dishes-appetisers-indeed-cuisine-rice-lentils-paneer-samosa-spices-mas-masala-179640947.jpg" class="wcu-card-image"/>
-              <h1 class="wcu-card-title">...</h1>
-              <p class="wcu-card-description">...</p>
+            <div class="wcu-card p-3 mb-3">
+              <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/fruits-img.png" class="wcu-card-image"/>
+              <h1 class="wcu-card-title">Fresh Food</h1>
+              <p class="wcu-card-description">
+                The Fresh Food group provides fresh-cut fruits and vegetables
+                directly picked from our partner farms and farm houses so that
+                you always get them tree to plate.
+              </p>
             </div>
           </div>
           <div class="col-12 col-md-4">
-            <div class="wcu-card mb-3 p-3">
-              <img src="https://thumbs.dreamstime.com/b/assorted-indian-food-set-wooden-background-dishes-appetisers-indeed-cuisine-rice-lentils-paneer-samosa-spices-mas-masala-179640947.jpg" class="wcu-card-image"/>
-              <h1 class="wcu-card-title">...</h1>
-              <p class="wcu-card-description">...</p>
+            <div class="wcu-card p-3 mb-3">
+              <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/offers-img.png" class="wcu-card-image"/>
+              <h1 class="wcu-card-title">Best Offers</h1>
+              <p class="wcu-card-description">
+                Food Coupons & Offers upto
+                <span class="offers">50% OFF</span>
+                and Exclusive Promo Codes on All Online Food Orders.
+              </p>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="useless-container"></div>
+    
 </body>
 </html>
