Adding explore menu

--- a/restaurant_site/index.html
+++ b/restaurant_site/index.html
@@ -22,14 +22,14 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
             <a class="nav-link active" id="navItem1" href="#wcu">Why Choose Us? <span class="sr-only">(current)</span></a>
-            <a class="nav-link" id="navItem2" href="#">Explore Menu</a>
+            <a class="nav-link" id="navItem2" href="#em">Explore Menu</a>
             <a class="nav-link" id="navItem3" href="#">Delivery & Payments</a>
             <a class="nav-link" id="navItem4" href="#">Follow Us</a>
-            
           </div>
         </div>
       </div>
     </nav>
+
     <div class="banner-section-bg-container d-flex flex-column justify-content-center">
       <div class="text-center">
         <h1 class="banner-heading mb-3">
@@ -46,10 +46,11 @@
         </button>
       </div>
     </div>
-    <div class="wcu-section pt-3 pb-5">
-      <div class="container"> 
+
+    <div class="wcu-section pt-5 pb-5 ml-5 mr-5">
+      <div class="fluid-container"> 
         <div class="row">
-          <div class="col-12 ml-3">
+          <div class="col-12"  id="wcu">
             <h1 class="wcu-section-heading">
               Why Choose Us?
             </h1>
@@ -58,7 +59,7 @@
             </p>
           </div>
           <div class="col-12 col-md-4">
-            <div class="wcu-card p-3 mb-3" id="wcu">
+            <div class="wcu-card p-3 mb-3">
               <img
                 src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/food-serve.png"
                 class="wcu-card-image"/>
@@ -88,6 +89,120 @@
                 <span class="offers">50% OFF</span>
                 and Exclusive Promo Codes on All Online Food Orders.
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="em-section pt-2 pb-5 ml-5 mr-5" id="em">
+      <div class="fluid-container">
+        <div class="row">
+          <div class="col-12">
+            <h1 class="em-section-heading">Explore Menu</h1>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3">
+            <div class="shadow em-item-card p-3 mb-3">
+              <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-ginger-fried-img.png" class="em-image w-100"/>
+              <h1 class="em-card-title">Non-Veg Starter</h1>
+              <a href="" class="em-item-link">View all  <svg width="14px" height="14px" viewBox="0 0 16 16" class="bi bi-arrow-right-short" fill="#d0b200" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  fill-rule="evenodd"
+                  d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"
+                />
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3">
+            <div class="shadow em-item-card p-3 mb-3">
+              <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-veg-starters-img.png" class="em-image w-100"/>
+              <h1 class="em-card-title">Veg Starter</h1>
+              <a href="" class="em-item-link">View all  <svg width="14px" height="14px" viewBox="0 0 16 16" class="bi bi-arrow-right-short" fill="#d0b200" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  fill-rule="evenodd"
+                  d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"
+                />
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3">
+            <div class="shadow em-item-card p-3 mb-3">
+              <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-soup-img.png" class="em-image w-100"/>
+              <h1 class="em-card-title">Soups</h1>
+              <a href="" class="em-item-link">View all  <svg width="14px" height="14px" viewBox="0 0 16 16" class="bi bi-arrow-right-short" fill="#d0b200" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  fill-rule="evenodd"
+                  d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"
+                />
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3">
+            <div class="shadow em-item-card p-3 mb-3">
+              <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-grilled-seafood-img.png" class="em-image w-100"/>
+              <h1 class="em-card-title">Fish & Sea Food</h1>
+              <a href="" class="em-item-link">View all  <svg width="14px" height="14px" viewBox="0 0 16 16" class="bi bi-arrow-right-short" fill="#d0b200" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  fill-rule="evenodd"
+                  d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"
+                />
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3">
+            <div class="shadow em-item-card p-3 mb-3">
+              <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-hyderabadi-biryani-img.png" class="em-image w-100"/>
+              <h1 class="em-card-title">Main Course</h1>
+              <a href="" class="em-item-link">View all  <svg width="14px" height="14px" viewBox="0 0 16 16" class="bi bi-arrow-right-short" fill="#d0b200" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  fill-rule="evenodd"
+                  d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"
+                />
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3">
+            <div class="shadow em-item-card p-3 mb-3">
+              <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-mushroom-noodles-img.png" class="em-image w-100"/>
+              <h1 class="em-card-title">Noodles</h1>
+              <a href="" class="em-item-link">View all  <svg width="14px" height="14px" viewBox="0 0 16 16" class="bi bi-arrow-right-short" fill="#d0b200" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  fill-rule="evenodd"
+                  d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"
+                />
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3">
+            <div class="shadow em-item-card p-3 mb-3">
+              <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-gluten-img.png" class="em-image w-100"/>
+              <h1 class="em-card-title">Salads</h1>
+              <a href="" class="em-item-link">View all  <svg width="14px" height="14px" viewBox="0 0 16 16" class="bi bi-arrow-right-short" fill="#d0b200" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  fill-rule="evenodd"
+                  d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"
+                />
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3">
+            <div class="shadow em-item-card p-3 mb-3">
+              <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-coffee-bourbon-img.png" class="em-image w-100"/>
+              <h1 class="em-card-title">Desserts</h1>
+              <a href="" class="em-item-link">View all  <svg width="14px" height="14px" viewBox="0 0 16 16" class="bi bi-arrow-right-short" fill="#d0b200" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  fill-rule="evenodd"
+                  d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"
+                />
+                </svg>
+              </a>
             </div>
           </div>
         </div>
