Adding healthy food section

--- a/restaurant_site/index.html
+++ b/restaurant_site/index.html
@@ -208,6 +208,27 @@
         </div>
       </div>
     </div>
+
+    <div class="hf-section pt-5 pb-5 ml-5 mr-5">
+      <div class="fluid-container">
+        <div class="row">
+          <div class="col-12 col-md-5">
+            <div class="text-center">
+              <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/healthy-food-plate-img.png" class="hf-section-image"/>
+            </div>
+          </div>
+            <div class="col-12 col-md-7">
+              <h1 class="hf-section-heading">
+                Fresh, Healthy, Organic, Delicious Fruits
+              </h1>
+              <P class="hf-section-discription">
+                Say no to harmful chemicals and go fully organic with our range of fresh fruits and veggies. Pamper your body and your senses with the true and unadulterated gifts from mother nature. with the true and unadulterated gifts from mother nature.
+              </P>
+              <button class="hf-section-button">Watch Video</button>
+            </div>
+        </div>
+      </div>
+    </div>
     
 </body>
 </html>
