--- a/restaurant_site/index.html
+++ b/restaurant_site/index.html
@@ -23,7 +23,7 @@
           <div class="navbar-nav ml-auto">
             <a class="nav-link active" id="navItem1" href="#wcu">Why Choose Us? <span class="sr-only">(current)</span></a>
             <a class="nav-link" id="navItem2" href="#em">Explore Menu</a>
-            <a class="nav-link" id="navItem3" href="#">Delivery & Payments</a>
+            <a class="nav-link" id="navItem3" href="#payment-section">Delivery & Payments</a>
             <a class="nav-link" id="navItem4" href="#">Follow Us</a>
           </div>
         </div>
@@ -226,6 +226,33 @@
               </P>
               <button class="hf-section-button">Watch Video</button>
             </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="pay-section pt-5 pb-5 ml-5 mr-5" id="payment-section">
+      <div class="fluid-container">
+        <div class="row">
+          <div class="col-12 col-md-5 order-1 order-md-2">
+            <div class="text-center">
+              <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/delivery-payment-section-img.png" class="pay-section-image"/>
+            </div>
+          </div>
+          <div class="col-12 col-md-7 order-2 order-md-1">
+            <h1 class="pay-section-heading">
+              Delivery and Payment
+            </h1>
+            <p class="pay-section-description">
+              Enjoy hassie-free payment with the plentitude of payment options available for you. Get live tracking and locate your food on a live map.It's quite a sight to see your food arrive to your door. Plus, you get a <span class="pay-section-discount">5% discount</span> on every order every time you pay online.
+            </p>
+            <button class="pay-section-button">Order Now</button>
+            <div class="pay-section-ways">
+              <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/visa-card-img.png" class="pay-section-ways-image"/>
+              <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/master-card-img.png" class="pay-section-ways-image"/>
+              <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/paypal-card-img.png" class="pay-section-ways-image"/>
+              <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/american-express-img.png" class="pay-section-ways-image"/>
+            </div>
+          </div>
         </div>
       </div>
     </div>
