--- a/restaurant_site/index.html
+++ b/restaurant_site/index.html
@@ -256,6 +256,30 @@
         </div>
       </div>
     </div>
+
+    <div class="tc-section pt-5 pb-5 ml-5 mr-5">
+      <div class="fluid-container">
+        <div class="row">
+          <div class="col-12 col-md-7 d-flex flex-column justify-content-center">
+            <h1 class="tc-section-heading">
+              Thank you for being a valuable customer to us.
+            </h1>
+            <p class="tc-section-description">
+              We have a surprise gift for you
+            </p>
+            <div class="d-md-none">
+              <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/thanking-customers-section-img.png" class="tc-section-image"/>
+            </div>
+            <div>
+              <button class="tc-section-button">Redeem Gift</button>
+            </div>
+          </div>
+          <div class="col-12 col-md-5 d-none d-md-block">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/thanking-customers-section-img.png" class="tc-section-image"/>
+          </div>
+        </div>
+      </div>
+    </div>
     
 </body>
 </html>
