--- a/restaurant_site/index.html
+++ b/restaurant_site/index.html
@@ -209,7 +209,8 @@
       </div>
     </div>
 
-    <div class="hf-section pt-5 pb-5 ml-5 mr-5">
+    <div class="hf-section">
+    <div class="pt-5 pb-5 ml-5 mr-5">
       <div class="fluid-container">
         <div class="row">
           <div class="col-12 col-md-5">
@@ -228,6 +229,7 @@
             </div>
         </div>
       </div>
+    </div>
     </div>
 
     <div class="pay-section pt-5 pb-5 ml-5 mr-5" id="payment-section">
@@ -257,7 +259,8 @@
       </div>
     </div>
 
-    <div class="tc-section pt-5 pb-5 ml-5 mr-5">
+    <div class="tc-section">
+    <div class="pt-5 pb-5 ml-5 mr-5">
       <div class="fluid-container">
         <div class="row">
           <div class="col-12 col-md-7 d-flex flex-column justify-content-center">
@@ -279,6 +282,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
     
 </body>
