Reducing common style

--- a/restaurant_site/index.html
+++ b/restaurant_site/index.html
@@ -225,7 +225,7 @@
               <P class="hf-section-discription">
                 Say no to harmful chemicals and go fully organic with our range of fresh fruits and veggies. Pamper your body and your senses with the true and unadulterated gifts from mother nature. with the true and unadulterated gifts from mother nature.
               </P>
-              <button class="hf-section-button">Watch Video</button>
+              <button class="custom-button">Watch Video</button>
             </div>
         </div>
       </div>
@@ -247,7 +247,7 @@
             <p class="pay-section-description">
               Enjoy hassie-free payment with the plentitude of payment options available for you. Get live tracking and locate your food on a live map.It's quite a sight to see your food arrive to your door. Plus, you get a <span class="pay-section-discount">5% discount</span> on every order every time you pay online.
             </p>
-            <button class="pay-section-button">Order Now</button>
+            <button class="custom-button">Order Now</button>
             <div class="pay-section-ways">
               <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/visa-card-img.png" class="pay-section-ways-image"/>
               <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/master-card-img.png" class="pay-section-ways-image"/>
@@ -274,7 +274,7 @@
               <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/thanking-customers-section-img.png" class="tc-section-image"/>
             </div>
             <div>
-              <button class="tc-section-button">Redeem Gift</button>
+              <button class="custom-button">Redeem Gift</button>
             </div>
           </div>
           <div class="col-12 col-md-5 d-none d-md-block">
