--- a/restaurant_site/index.html
+++ b/restaurant_site/index.html
@@ -9,9 +9,10 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/ac42c3b1f7.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="https://logowik.com/content/uploads/images/restaurant9491.logowik.com.webp" class="restaurant-logo"/>
@@ -245,7 +246,7 @@
               Delivery and Payment
             </h1>
             <p class="pay-section-description">
-              Enjoy hassie-free payment with the plentitude of payment options available for you. Get live tracking and locate your food on a live map.It's quite a sight to see your food arrive to your door. Plus, you get a <span class="pay-section-discount">5% discount</span> on every order every time you pay online.
+              Enjoy hassle-free payment with the plentitude of payment options available for you. Get live tracking and locate your food on a live map.It's quite a sight to see your food arrive to your door. Plus, you get a <span class="pay-section-discount">5% discount</span> on every order every time you pay online.
             </p>
             <button class="custom-button">Order Now</button>
             <div class="pay-section-ways">
@@ -283,6 +284,32 @@
         </div>
       </div>
     </div>
+    </div>
+
+    <div class="fu-section text-center pt-5 pb-5">
+      <div class="fluid-container">
+        <div class="row">
+          <div class="col-12">
+            <h1 class="fu-section-heading">Follow Us</h1>
+            <div class="col-12">
+              <div class="d-flex flex-row justify-content-center">
+                <div class="fu-section-icon-container">
+                  <a class ="link" href="https://google.com" target="_main"><i class="fa-brands fa-x-twitter fa-beat-fade icon"></i></a>
+                </div>
+                <div class="fu-section-icon-container">
+                  <a class ="link" href="https://google.com" target="_main"><i class="fa-brands fa-instagram fa-beat-fade icon"></i></a>
+                </div>
+                <div class="fu-section-icon-container">
+                  <a class ="link" href="https://google.com" target="_main"><i class="fa-brands fa-facebook fa-beat-fade icon"></i></a>
+                </div>
+                <div class="fu-section-icon-container">
+                  <a class ="link" href="https://google.com" target="_main"><i class="fa-brands fa-linkedin fa-beat-fade icon"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     
 </body>
