Adding links and footer section

--- a/restaurant_site/index.html
+++ b/restaurant_site/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="https://logowik.com/content/uploads/images/restaurant9491.logowik.com.webp" class="restaurant-logo"/>
+          <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/food-munch-logo-light.png" class="restaurant-logo"/>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
             <a class="nav-link active" id="navItem1" href="#wcu">Why Choose Us? <span class="sr-only">(current)</span></a>
             <a class="nav-link" id="navItem2" href="#em">Explore Menu</a>
             <a class="nav-link" id="navItem3" href="#payment-section">Delivery & Payments</a>
-            <a class="nav-link" id="navItem4" href="#">Follow Us</a>
+            <a class="nav-link" id="navItem4" href="#follow-section">Follow Us</a>
           </div>
         </div>
       </div>
@@ -286,7 +286,7 @@
     </div>
     </div>
 
-    <div class="fu-section text-center pt-5 pb-5">
+    <div class="fu-section text-center pt-5 pb-5" id="follow-section">
       <div class="fluid-container">
         <div class="row">
           <div class="col-12">
@@ -294,19 +294,33 @@
             <div class="col-12">
               <div class="d-flex flex-row justify-content-center">
                 <div class="fu-section-icon-container">
-                  <a class ="link" href="https://google.com" target="_main"><i class="fa-brands fa-x-twitter fa-beat-fade icon"></i></a>
+                  <a class ="link" href="https://twitter.com/_rajshekhar01" target="_main"><i class="fa-brands fa-x-twitter fa-beat-fade icon"></i></a>
                 </div>
                 <div class="fu-section-icon-container">
-                  <a class ="link" href="https://google.com" target="_main"><i class="fa-brands fa-instagram fa-beat-fade icon"></i></a>
+                  <a class ="link" href="https://www.instagram.com/rajshekhar_2150/" target="_main"><i class="fa-brands fa-instagram fa-beat-fade icon"></i></a>
                 </div>
                 <div class="fu-section-icon-container">
                   <a class ="link" href="https://google.com" target="_main"><i class="fa-brands fa-facebook fa-beat-fade icon"></i></a>
                 </div>
                 <div class="fu-section-icon-container">
-                  <a class ="link" href="https://google.com" target="_main"><i class="fa-brands fa-linkedin fa-beat-fade icon"></i></a>
+                  <a class ="link" href="https://www.linkedin.com/in/rajshekhar-prasad-saxena-563004280/" target="_main"><i class="fa-brands fa-linkedin fa-beat-fade icon"></i></a>
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-section pt-5 pb-5">
+      <div class="fluid-container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/food-munch-logo-light.png"class="food-munch-logo"/>
+            <h1 class="footer-section-mail">orderfood@foodmunch.com</h1>
+            <p class="footer-section-address">
+              123 Ayur Vigyan Nagar, New Delhi, India.
+            </p>
           </div>
         </div>
       </div>
