--- a/restaurant_site/index.html
+++ b/restaurant_site/index.html
@@ -275,7 +275,30 @@
               <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/thanking-customers-section-img.png" class="tc-section-image"/>
             </div>
             <div>
-              <button class="custom-button">Redeem Gift</button>
+              <!-- Button trigger modal -->
+              <button type="button" class="custom-button" data-toggle="modal" data-target="#exampleModal">
+                Redeem Gift
+              </button>
+
+              <!-- Modal -->
+              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title modal-h" id="exampleModalLabel">Gift Voucher</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body pt-5">
+                      <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/gift-voucher-img.png" class="w-100"/>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="custom-button" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-12 col-md-5 d-none d-md-block">
