Basic allignment are done

--- a/restaurant_site/index.html
+++ b/restaurant_site/index.html
@@ -15,7 +15,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/food-munch-logo-light.png" class="restaurant-logo"/>
+          <img src="https://play-lh.googleusercontent.com/f_vJH63rGrm2ZwPeaPq-OB8Gyw-iMvKKBHoST_CHhJ1ihLnVUy8gd66mirqME77Y7g" class="restaurant-logo" />
+         <!-- <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/food-munch-logo-light.png" class="restaurant-logo"/>-->
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -30,7 +31,7 @@
         </div>
       </div>
     </nav>
-
+<!--
     <div class="banner-section-bg-container d-flex flex-column justify-content-center">
       <div class="text-center">
         <h1 class="banner-heading mb-3">
@@ -47,7 +48,24 @@
         </button>
       </div>
     </div>
-
+-->
+    <div class="banner-section-bg-container d-flex flex-column justify-content-center">
+      <div class="text-center">
+          <h1 class="banner-heading main mb-3">Angeethee</h1>
+          <h1 class="banner-heading mb-3">
+              Get Delicious Food Anytime
+          </h1>
+          <p class="paragraph mb-4">
+              Order As You Go
+          </p>
+          <button class="custom-button" id="menu-button">
+              View Menu
+          </button>
+          <button class="custom-outline-button" id="order-button">
+              Order Now
+          </button>
+      </div>
+    </div>
     <div class="wcu-section pt-5 pb-5 ml-5 mr-5">
       <div class="fluid-container"> 
         <div class="row">
@@ -326,7 +344,7 @@
                   <a class ="link" href="https://google.com" target="_main"><i class="fa-brands fa-facebook fa-beat-fade icon"></i></a>
                 </div>
                 <div class="fu-section-icon-container">
-                  <a class ="link" href="https://www.linkedin.com/in/rajshekhar-prasad-saxena-563004280/" target="_main"><i class="fa-brands fa-linkedin fa-beat-fade icon"></i></a>
+                  <a class ="link" href="https://www.linkedin.com/in/rajshekhar2150" target="_main"><i class="fa-brands fa-linkedin fa-beat-fade icon"></i></a>
                 </div>
               </div>
             </div>
